# AgentFold

./: .gitignore  README.md  README_90_SECONDS.md  agentfold.policy.json  pyproject.toml
.github/: FOLDER_README.md  README.md
.github/workflows/: README.md  agentfold-ci.yml
agentfold/: README.md  __init__.py  cli.py
agentfold/adapters/: README.md  __init__.py  base.py  cms_adapter.py  codex_adapter.py  gnb_adapter.py  rhp_adapter.py  tessera_adapter.py
agentfold/authority/: README.md  __init__.py  matrix.py
agentfold/benchmark/: README.md  __init__.py  report.py  runner.py  tasks.py
agentfold/ci/: README.md  __init__.py  policy.py  verify.py
agentfold/evidence/: README.md  __init__.py  (+1 more)
benchmarks/: README.md
docs/: DOCS_REGISTRY.md  README.md
examples/: README.md
rcc/: README.md
releases/: README.md  agentfold_v1_0_0_local_release_seal.json  agentfold_v1_0_0_local_release_seal.md  agentfold_v1_4_0_release_candidate.json  agentfold_v1_4_0_release_candidate.md
tests/: README.md  test_agent_genome_schema.py  test_agent_phenotype.py  test_compounding_gate.py  test_fitness_vector.py  test_fold_graph_builder.py  test_fold_prediction.py  test_ledger_hashchain.py  test_misfold_detection.py  test_no_claim_elevation_without_evidence.py  test_no_compounding_without_origin.py  test_no_unauthorized_tool_call.py  test_origin_alignment.py  test_repository_context_shell.py  test_transcript_recorder.py  test_v1_1_io_cli_surfaces.py  test_v1_2_instrumentation.py  test_v1_3_ci_gate.py  test_v1_4_release_validation.py  test_v1_authority_evidence_pipeline.py
(+108 files in other folders)
