[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentfold"
version = "0.1.0"
description = "AgentFold: Sequence-to-Behavior Folding Architecture for Evidence-Gated Agent Systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "James Paul Jackson", email = "jacksonjp0311@protonmail.com"}
]
keywords = ["agent", "genome", "folding", "governance", "evidence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
agentfold = "agentfold.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
